--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>I’mRex - Personal Resume HTML Template</title>
+    <title>Eddie Master</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -56,6 +56,7 @@
 <!-- Module Education -->
 <script src="js/education/app/education.js" type="text/javascript"></script>
 <script src="js/education/directive/education.directive.js" type="text/javascript"></script>
+<script src="js/education/config/education.lang.js" type="text/javascript"></script>
 
 <!-- Module jobs -->
 <script src="js/jobs/app/jobs.js" type="text/javascript"></script>
