Ajuste del diseño. y traduccion

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 <!-- Module jobs -->
 <script src="js/jobs/app/jobs.js" type="text/javascript"></script>
 <script src="js/jobs/directive/jobs.directive.js" type="text/javascript"></script>
+<script src="js/jobs/config/jobs.lang.js" type="text/javascript"></script>
 
 <!-- Module References -->
 <script src="js/references/app/references.js" type="text/javascript"></script>
