--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="css/vendor/owl.transitions.css">
     <link rel="stylesheet" href="bower_components/flag-icon-css/css/flag-icon.min.css">
     <script src="lib/vendor/modernizr.js" type="text/javascript"></script>
+    <script src="bower_components/angularPrint/angularPrint.css" type="text/javascript"></script>
 
 
 </head>
@@ -38,6 +39,7 @@
 <script src="bower_components/angular/angular.min.js" type="text/javascript"></script>
 <script src="bower_components/angular-ui-router/angular-ui-router.min.js" type="text/javascript"></script>
 <script src="bower_components/angular-translate/angular-translate.min.js" type="text/javascript"></script>
+
 
 <!-- Module about -->
 <script src="js/about/app/about.js" type="text/javascript" ></script>
